--- a/test_paturage.html
+++ b/test_paturage.html
@@ -155,7 +155,7 @@
 	<!-- Fichier ZONES -->	 
 		
 	var zpstyle = {
-		"color": "yellow",
+		"color": "green",
 		"weight": 2,
 		"fillOpacity": .3
 		};
